# issue_plat

./: .gitignore  AGENTS.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  wrangler.toml
data/: app.db
functions/: index.ts
functions/api/annotations/: create.ts  list.ts  reply.ts  report.ts
functions/api/mod/: list.ts  update.ts
functions/api/posts/: upsert.ts
functions/posts/: [slug].ts
leptos-app/: Cargo.toml  Trunk.toml  index.html  style.css
leptos-app/src/: app.rs  lib.rs
migrations/: 0001_init.sql  0002_indexes.sql  0002_seed_dev.sql  0003_annotation_kind.sql
public/: annotate.js  index.html  toc.js  ui.js
public/assets/: index.html  leptos-app-f1a6198edd7da59a.js  leptos-app-f1a6198edd7da59a_bg.wasm
public/styles/: style.css
scripts/: build-wasm.mjs  dev-all.mjs  dev-wasm.mjs  runtime-target.mjs  wasm-utils.mjs
src/lib/: crypto.ts  http.ts  runtime.ts  sanitizer.ts  turnstile.ts  types.ts
src/lib/annotations/: constants.ts  content.ts  validation.ts
src/server/: db.ts  index.ts  services.ts  turnstile.ts  utils.ts  validators.ts
src/server/routes/: annotations.ts  mod.ts  posts-api.ts  posts.ts
src/server/views/: home.ts  layout.ts  post.ts
tests/: annotations.test.ts  sanitizer.test.ts
