[package]
name = "leptos-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window", "Document", "Element", "Node", "Selection", "Range", "HtmlElement",
  "Navigator", "Clipboard", "DomRectList", "DomRectReadOnly"
] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
